--- a/lab6/src/App.module.css
+++ b/lab6/src/App.module.css
@@ -9,4 +9,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.back {
+  background-image: url("./assets/back.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
