--- a/lab6/src/Components/field.module.css
+++ b/lab6/src/Components/field.module.css
@@ -6,7 +6,7 @@
 
     width: 400px;
     height: 400px;
-    border: 1px solid black;
+    border: 1px solid white;
     align-items: center;
     justify-items: center;
 }
@@ -14,9 +14,10 @@
 .dot {
     width: 20%;
     height: 20%;
-    background-color: black;
+    background-color: white;
     border-radius: 50%;
     cursor: pointer;
+    z-index: 1;
 }
 
 .active-dot {
@@ -25,5 +26,44 @@
 
 .line {
     position: absolute;
-    z-index: -1;
+    z-index: 0;
+}
+
+.game-over-window {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 10;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+}
+
+button {
+    padding: 15px 30px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s ease-in-out;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+button:active {
+    transform: scale(0.95);
 }
